added grid system, and starting to work on header

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+
+        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
         <title>Omnifood</title>
@@ -10,7 +12,16 @@
 
     </head>
     <body>
-        <h1>Omnifood</h1>
+        <header>
+            <div class="hero-text-box">
+                <h1>Goodbye junk food. Hello super healthy meals.</h1>
+                <a href="a">I’m hungry</a>
+                <a href="a">Show me more</a>
+            </div>
+
+        </header>
+
+        
 
 
 
