added rough draft of nav bar w/ properly sized logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <img src="resources/css/img/logo-white.png" alt="Omnifood Logo" class="logo">
+                <ul class="main-nav">
+                    <li><a href="#">Food Delivery</a></li>
+                    <li><a href="#">How It Works</a></li>
+                    <li><a href="#">Our Cities</a></li>
+                    <li><a href="#">Sign Up</a></li>               
+                </ul>
+            </div>
+        </nav>
         <div class="hero-text-box container">
             <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
             <a class="btn btn-full" href="a">I’m hungry</a>
