--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     <section class="section-features">
         <div class="row">
-            <i class="ion-heart"></i>
             <h2>Get food fast &mdash; not fast food</h2>
             <p class="long-copy">
                  Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us
@@ -47,6 +46,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-4">
+                <i class="ion-ios-infinite-outline"></i>
                 <h3>Up to 365 days/year</h3>
                 <p>
                      Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose
@@ -54,6 +54,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4">
+                <i class="ion-ios-stopwatch-outline"></i>
                 <h3>Ready in 20 minutes</h3>
                 <p>
                      You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the
@@ -61,6 +62,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4">
+                <i class="ion-ios-nutrition-outline"></i>
                 <h3>100% organic</h3>
                 <p>
                      All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your
@@ -68,6 +70,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4">
+                <i class="ion-ios-cart-outline"></i>
                 <h3>Order anything</h3>
                 <p>
                      We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing
