--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div class="row">
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 box">
                 <i class="ion-ios-infinite-outline"></i>
                 <h3>Up to 365 days/year</h3>
                 <p>
@@ -53,7 +53,7 @@
                     to order more flexibly if that's your style.
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 box">
                 <i class="ion-ios-stopwatch-outline"></i>
                 <h3>Ready in 20 minutes</h3>
                 <p>
@@ -61,7 +61,7 @@
                     best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 box">
                 <i class="ion-ios-nutrition-outline"></i>
                 <h3>100% organic</h3>
                 <p>
@@ -69,7 +69,7 @@
                     health, the environment, and it also tastes better!
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 box">
                 <i class="ion-ios-cart-outline"></i>
                 <h3>Order anything</h3>
                 <p>
