--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-4 box">
-                <i class="ion-ios-infinite-outline"></i>
+                <i class="ion-ios-infinite-outline icon-big"></i>
                 <h3>Up to 365 days/year</h3>
                 <p>
                      Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4 box">
-                <i class="ion-ios-stopwatch-outline"></i>
+                <i class="ion-ios-stopwatch-outline icon-big"></i>
                 <h3>Ready in 20 minutes</h3>
                 <p>
                      You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4 box">
-                <i class="ion-ios-nutrition-outline"></i>
+                <i class="ion-ios-nutrition-outline icon-big"></i>
                 <h3>100% organic</h3>
                 <p>
                      All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your
@@ -70,7 +70,7 @@
                 </p>
             </div>
             <div class="col span-1-of-4 box">
-                <i class="ion-ios-cart-outline"></i>
+                <i class="ion-ios-cart-outline icon-big"></i>
                 <h3>Order anything</h3>
                 <p>
                      We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing
@@ -78,6 +78,17 @@
                 </p>
             </div>
         </div>
+
+    </section>
+
+    <section class="section-meals">
+        <ul class="meals-showcase">
+            <li>
+                <figure>
+                    <img src="resources/css/1.jpg" alt="Korean dish with egg and vegetables">
+                </figure>
+            </li>
+        </ul>
 
     </section>
 <!-- Section 1: Features
