--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
         </ul>
 
     </section>
+    <section class="section-steps">
+        <div class="row">  
+            <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1of-2">
+                <img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone">
+            </div>
+        </div>
+    </section>
 <!-- Section 1: Features
 Title: Get food fast — not fast food.
 
