--- a/index.html
+++ b/index.html
@@ -134,7 +134,24 @@
         </div>
         <div class="row">
             <div class="col span-1of-2">
-                <img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone">
+                <img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+            </div>
+            <div class="col span-1of-2">
+                <div class="work-step">
+                    <div>1</div>
+                    <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                </div>
+                <div class="work-step">
+                    <div>2</div>
+                    <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                </div>
+                <div class="work-step">
+                    <div>3</div>
+                    <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                </div>
+
+                <a href="a" class="btn-app"><img src="resources/css/img/download-app.svg" alt="App Store Button"></a>
+                <a href="a" class="btn-app"><img src="resources/css/img/download-app-android.svg" alt="Play Store Button"></a>
             </div>
         </div>
     </section>
