added a clearfix for float properties in the meals section, added slight backgrond color change

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <section class="section-meals">
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/css/img/1.jpg" alt="Korean dish with egg and vegetables">
@@ -104,7 +104,7 @@
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/css/img/5.jpg" alt="Paleo beef steak with vegetables">
