--- a/index.html
+++ b/index.html
@@ -156,6 +156,41 @@
         </div>
     </section>
 
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+        <ul class=""></ul>
+
+
+
+
+    </section>
+
+Section 4: Cities
+Title: We're currently in these cities
+
+Lisbon
+1600+ happy eaters
+60+ top chefs
+@omnifood_lx
+
+San Francisco
+3700+ happy eaters
+160+ top chefs
+@omnifood_sf
+
+Berlin
+2300+ happy eaters
+110+ top chefs
+@omnifood_berlin
+
+London
+1200+ happy eaters
+50+ top chefs
+@omnifood_london
+
+
 
 
 </body>
