added first column of section, will then copy it over. Need to change up image size first

--- a/index.html
+++ b/index.html
@@ -160,7 +160,25 @@
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
-        <ul class=""></ul>
+       <div class="row">
+           <div class="col span-1-of-4 box">
+            <img src="resources/css/img/lisbon-3.jpg" alt="Lisbon">
+            <h3>Lisbon</h3>
+            <div class="city-feature">
+                <i class="ion-ios-person"></i>
+                1600+ happy eaters
+            </div>
+            <div class="city-feature">
+                <i class="ion-ios-star"></i>
+                 60+ top chefs
+            </div>
+            <div class="city-feature">
+                <i class="ion-social-twitter"></i>
+                 @omnifood_lx
+            </div>
+
+           </div>
+       </div>
 
 
 
@@ -172,8 +190,8 @@ Title: We're currently in these cities
 
 Lisbon
 1600+ happy eaters
-60+ top chefs
-@omnifood_lx
+
+
 
 San Francisco
 3700+ happy eaters
