modified css to make sure it was responsive to variable screen sizes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="hero-text-box container">
+        <div class="hero-text-box">
             <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
             <a class="btn btn-full" href="a">I’m hungry</a>
             <a class="btn btn-ghost" href="a">Show me more</a>
@@ -133,10 +133,10 @@
             <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
         <div class="row">
-            <div class="col span-1of-2">
+            <div class="col span-1-of-2">
                 <img src="resources/css/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
             </div>
-            <div class="col span-1of-2">
+            <div class="col span-1-of-2">
                 <div class="works-step">
                     <div>1</div>
                     <p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -234,12 +234,6 @@
 
 
     </section>
-
-
-
-
-
-
 
 
 
