adding new section for customer testimonals

--- a/index.html
+++ b/index.html
@@ -230,9 +230,12 @@
         </div>
        </div>
 
+    </section>
 
-
-
+    <section class="section-testimonials">
+        <div class="row">
+            <h2>Our customers can't live without us</h2>
+        </div>
     </section>
 
 
