--- a/index.html
+++ b/index.html
@@ -262,6 +262,21 @@
             </div>
         </div>
     </section>
+    <section class="section-plans">
+        <h2>Start eating healthy today</h2>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Premium</h3>
+                        <p class="plan-price">$399 / month</p>
+                        <p class="plan-pric-meal">That's only $13.30 per meal</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 
