created first pricing plan

--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@
                         <p class="plan-price">$399 / month</p>
                         <p class="plan-pric-meal">That's only $13.30 per meal</p>
                     </div>
+                    <ul>
+                        <li class="opm-ios-checkmark-empty">1 meal every day</li>
+                        <li class="opm-ios-checkmark-empty">Order 24/7</li>
+                        <li class="opm-ios-checkmark-empty">Access to newest creations</li>
+                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="btn btn-full">Sign up now</a>
                 </div>
             </div>
         </div>
