added additional meal plans, still need to style them

--- a/index.html
+++ b/index.html
@@ -283,6 +283,42 @@
                     <a href="btn btn-full">Sign up now</a>
                 </div>
             </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Pro</h3>
+                        <p class="plan-price">$149 / month</p>
+                        <p class="plan-pric-meal">That's only $14.90 per meal</p>
+                    </div>
+                    <ul>
+                        <li class="opm-ios-checkmark-empty">1 meal 10 days/month</li>
+                        <li class="opm-ios-checkmark-empty">Order 24/7</li>
+                        <li class="opm-ios-checkmark-empty">Access to newest creations</li>
+                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="btn btn-ghost">Sign up now</a>
+                </div>
+            </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Starter</h3>
+                        <p class="plan-price">$19 per meal</p>
+                        <p class="plan-pric-meal"></p>
+                    </div>
+                    <ul>
+                        <li class="opm-ios-checkmark-empty">1 meal</li>
+                        <li class="opm-ios-checkmark-empty">Order from 8 am to 12 pm</li>
+                        <li class="opm-ios-close-empty">Access to newest creations</li>
+                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="btn btn-ghost">Sign up now</a>
+                </div>
+            </div>
         </div>
 
     </section>
