modified the pricing to make the font size larger and added a span for the per month text. its looking good

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
-                        <p class="plan-price">$399 / month</p>
+                        <p class="plan-price">$399 <span>/ month</span></p>
                         <p class="plan-pric-meal">That's only $13.30 per meal</p>
                     </div>
                     <ul>
@@ -287,7 +287,7 @@
                 <div class="plan-box">
                     <div>
                         <h3>Pro</h3>
-                        <p class="plan-price">$149 / month</p>
+                        <p class="plan-price">$149 <span>/ month</span></p>
                         <p class="plan-pric-meal">That's only $14.90 per meal</p>
                     </div>
                     <ul>
@@ -305,7 +305,7 @@
                 <div class="plan-box">
                     <div>
                         <h3>Starter</h3>
-                        <p class="plan-price">$19 per meal</p>
+                        <p class="plan-price">$19 <span>/ meal</span></p>
                         <p class="plan-pric-meal"></p>
                     </div>
                     <ul>
