debugged the line spacing of the icons and the list. it is aliged now and looking good, stil need to do some additional styling to it.

--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
                         <p class="plan-pric-meal">That's only $13.30 per meal</p>
                     </div>
                     <ul>
-                        <li class="opm-ios-checkmark-empty">1 meal every day</li>
-                        <li class="opm-ios-checkmark-empty">Order 24/7</li>
-                        <li class="opm-ios-checkmark-empty">Access to newest creations</li>
-                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
                     </ul>
                 </div>
                 <div>
@@ -291,10 +291,10 @@
                         <p class="plan-pric-meal">That's only $14.90 per meal</p>
                     </div>
                     <ul>
-                        <li class="opm-ios-checkmark-empty">1 meal 10 days/month</li>
-                        <li class="opm-ios-checkmark-empty">Order 24/7</li>
-                        <li class="opm-ios-checkmark-empty">Access to newest creations</li>
-                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal 10 days/month</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
                     </ul>
                 </div>
                 <div>
@@ -309,10 +309,10 @@
                         <p class="plan-pric-meal"></p>
                     </div>
                     <ul>
-                        <li class="opm-ios-checkmark-empty">1 meal</li>
-                        <li class="opm-ios-checkmark-empty">Order from 8 am to 12 pm</li>
-                        <li class="opm-ios-close-empty">Access to newest creations</li>
-                        <li class="opm-ios-checkmark-empty">Free delivery</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Order from 8 am to 12 pm</li>
+                        <li><i class="ion-ios-close-empty icon-small"></i>Access to newest creations</li>
+                        <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
                     </ul>
                 </div>
                 <div>
