--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </ul>
                 </div>
                 <div>
-                    <a href="btn btn-full">Sign up now</a>
+                    <a href="#" class="btn btn-full">Sign up now</a>
                 </div>
             </div>
             <div class="col span-1-of-3">
@@ -298,7 +298,7 @@
                     </ul>
                 </div>
                 <div>
-                    <a href="btn btn-ghost">Sign up now</a>
+                    <a href="#" class="btn btn-ghost">Sign up now</a>
                 </div>
             </div>
             <div class="col span-1-of-3">
@@ -306,7 +306,7 @@
                     <div>
                         <h3>Starter</h3>
                         <p class="plan-price">$19 <span>/ meal</span></p>
-                        <p class="plan-pric-meal"></p>
+                        <p class="plan-pric-meal">&nbsp</p>
                     </div>
                     <ul>
                         <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal</li>
@@ -316,7 +316,7 @@
                     </ul>
                 </div>
                 <div>
-                    <a href="btn btn-ghost">Sign up now</a>
+                    <a href="#" class="btn btn-ghost">Sign up now</a>
                 </div>
             </div>
         </div>
