--- a/index.html
+++ b/index.html
@@ -331,6 +331,26 @@
         </div>
 
     </section>
+    <section class="section-form">
+        <div class="row">
+            <h2>We're happy to hear from you</h2>
+        </div>
+        <div class="row">
+            <form action="#" method="post" class="contact-form">
+                <div class="row">
+                    <div class="col span-1-of-3">
+
+                    </div>
+                    <div class="col span-2-of-3">
+
+                    </div>
+                </div>
+            </form>
+        </div>
+
+
+
+    </section>
 
 
 
