added part of form to subscribe to the newsletter and/or to contact the company

--- a/index.html
+++ b/index.html
@@ -359,12 +359,28 @@
                     </div>
                     <div class="col span-2-of-3">
                         <select name="find-us" id="find-us">
-                            <option value="friends">Friends</option>
+                            <option value="friends" selected>Friends</option>
                             <option value="google">Google Search</option>
                             <option value="facebook">Facebook</option>
                             <option value="yelp">Yelp</option>
                             <option value="other">Other</option>
                         </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label>Newsletter</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="checkbox" name="news" id="news" checked> Yes! Please send me delicous food recommendations
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label>Drop us a line</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea name="message" placeholder="Your message"></textarea>
                     </div>
                 </div>
             </form>
