--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
             <form action="#" method="post" class="contact-form">
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label>Name</label>
+                        <!-- This allows us to click on the title text and selects that text box -->
+                        <label for="name">Name</label>
                     </div>
                     <div class="col span-2-of-3">
                         <input type="text" name="name" id="name" placeholder="Your name" required>
@@ -347,7 +348,7 @@
                 </div>
                 <div class="row">
                     <div class="col span-1-of-3">
-                        <label>Email</label>
+                        <label for="find-us">Email</label>
                     </div>
                     <div class="col span-2-of-3">
                         <input type="text" name="email" id="email" placeholder="Your email" required>
@@ -381,6 +382,14 @@
                     </div>
                     <div class="col span-2-of-3">
                         <textarea name="message" placeholder="Your message"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label>&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="submit" value="Send it!">
                     </div>
                 </div>
             </form>
