--- a/index.html
+++ b/index.html
@@ -394,10 +394,29 @@
                 </div>
             </form>
         </div>
-
-
-
     </section>
+
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#"></a>Blog</li>
+                    <li><a href="#"></a>Press</li>
+                    <li><a href="#"></a>iOS App</li>
+                    <li><a href="#"></a>Android App</li>
+                </ul>
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                    <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
