finished html for footer section

--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <p>
+                Copyright &copy; 2018 by Omnifood. All rights reserved.
+            </p>
+        </div>
+
     </footer>
 
 
